tests/expectations/compiler/integers/i64/max_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372008]: The value 9223372036854775808 is not a valid `i64`
    --> compiler-test:5:22
     |
   5 |         let a: i64 = 9223372036854775808i64;
     |                      ^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
